# cloud-haskell-demo

./: README.md  cloud-haskell-demo.cabal
app/: Main.hs
src/: LocalNode.hs  Nodes.hs  RemoteNode.hs
