name:                cloud-haskell-demo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/gvolpe/cloud-haskell-demo#readme
license:             BSD3
license-file:        LICENSE
author:              Gabriel Volpe
maintainer:          gvolpe@github.com
copyright:           Copyright: (c) 2017 Gabriel Volpe
category:            Demo
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Nodes, LocalNode, RemoteNode
  build-depends:       base >= 4.7 && < 5
                     , distributed-process
                     , network-transport-tcp
  default-language:    Haskell2010

executable cloud-haskell-demo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , distributed-process
                     , network-transport-tcp
                     , cloud-haskell-demo
  default-language:    Haskell2010

test-suite cloud-haskell-demo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cloud-haskell-demo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gvolpe/cloud-haskell-demo
